# periodic-table-on-an-enum

./: Cargo.toml  LICENSE  PubChemElements_all.json  README.md  build.rs
src/: lib.rs
