[package]
name = "ptable"
version = "0.3.1"
authors = ["sandmor"]
edition = "2018"
build = "build.rs"
description = "Complete periodic table, with melting point, density, atomic mass, electron configuration, oxidation states and more."
categories = ["science"]
keywords = ["periodic-table", "chemistry", "chemical"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/ptable/"
homepage = "https://crates.io/crates/ptable"
repository = "https://github.com/sandmor/ptable"

[dependencies]
[build-dependencies]
json = "0"
memchr = "2"