[package]
name = "periodic-table-on-an-enum"
version = "0.3.2"
authors = ["sandmor"]
edition = "2018"
build = "build.rs"
description = "Complete periodic table, with melting point, density, atomic mass, electron configuration, oxidation states and more."
categories = ["science"]
keywords = ["periodic-table", "chemistry", "chemical"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/periodic-table-on-an-enum/"
homepage = "https://crates.io/crates/periodic-table-on-an-enum"
repository = "https://github.com/sandmor/periodic-table-on-an-enum"

[dependencies]
[build-dependencies]
json = "0"
